--- a/desktop-mode & error state.html
+++ b/desktop-mode & error state.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>desktop-mode & error state</title>
+        <script src="https://kit.fontawesome.com/bd422aecd6.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="files/styles.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="text">
+                <h1>Stay updated!</h1>
+                <p>Join 60,000+ product managers recieving monthly updates on;</p>
+                <p></p><i class="fa-solid fa-circle-check" style="color: #fd6154;"></i>&nbsp; 
+                &nbsp; Product discovery and building what matters</p>
+                <p><i class="fa-solid fa-circle-check" style="color: #fd6154;"></i>&nbsp; 
+                    &nbsp; Measuring to ensure updates are a success</p>
+                <p><i class="fa-solid fa-circle-check" style="color: #fd6154;"></i>&nbsp; 
+                    &nbsp; And much more!
+                </p><br>
+                <p>Email address</p>
+                    <form action="https://www.youtube.com/">
+                        <input type="email" placeholder="email@company.com" required><br></br>
+                        <button type="submit">Subscribe to monthly news letter</button>
+                    </form>
+                </div>
+            <div class="image">
+                <img src="files/pic.PNG" alt="news-letter">
+            </div>
+        </div>    
+    </body>
 
+</html>
